# prcv_final

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ocr
include/: helper.h  helper_functions.h
models/: number_plate.names
src/: helper.cpp  helper_functions.cpp  main.cpp  output  poly_mask.cpp  polygon.cpp  tessocr.cpp  yolo_v5.cpp
yolo_code_ready/: CMakeCache.txt  Makefile  cmake_install.cmake  dev_convert_pytorch_to_onnx  main  yolov5.cpp  yolov5.py  yolov5_original.cpp
